[gd_scene load_steps=7 format=2]

[ext_resource path="res://hero/Dice.gd" type="Script" id=1]
[ext_resource path="res://sprites/dice_weapon.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "roll"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.5, 7 )

[node name="diceWeapon" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
rotation = 6.28319
texture = ExtResource( 2 )

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/roll = SubResource( 3 )

[node name="throwTimer" type="Timer" parent="."]
one_shot = true

[node name="idleTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="trigger" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="collision" type="CollisionShape2D" parent="trigger"]
position = Vector2( -0.5, 0 )
shape = SubResource( 4 )

[connection signal="timeout" from="throwTimer" to="." method="_on_throwTimer_timeout"]
[connection signal="timeout" from="idleTimer" to="." method="_on_idleTimer_timeout"]
[connection signal="body_entered" from="trigger" to="." method="_on_trigger_body_entered"]
